--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -37,7 +37,7 @@
         top: 0;
         left: 0;
         z-index: 1500;
-
+        visibility: hidden;
         opacity: 0;
         width: 0;
         transition: all .8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
@@ -89,6 +89,9 @@
 
 
     //FUNCTIONALITY
+    &__checkbox ~ &__nav {
+        visibility: visible;
+    }
     &__checkbox:checked ~ &__background {
         transform: scale(80);
     }
